# local-semantic-search

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: retrieval.md  search.md  support.md
semantic_search/: __init__.py  app.py  cli.py  documents.py  embedding.py  index.py
tests/: test_app.py  test_documents.py  test_index.py
web/static/: styles.css
web/templates/: document.html  index.html
