[project]
name = "local-semantic-search"
version = "0.1.0"
description = "A local semantic search engine with a CLI and web UI."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
semantic-search = "semantic_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_search"]
